--- a/index.html
+++ b/index.html
@@ -11,17 +11,21 @@
     <header>
       <h1>Guess My Number!</h1>
       <p class="between">(Between 1 and 20)</p>
+      <!--again button-->
       <button class="btn again">Again!</button>
       <div class="number">?</div>
     </header>
     <main>
       <section class="left">
         <input type="number" class="guess" />
+        <!--check button-->
         <button class="btn check">Check!</button>
       </section>
       <section class="right">
         <p class="message">Start guessing...</p>
+        <!--score counter-->
         <p class="label-score">💯 Score: <span class="score">20</span></p>
+        <!--high score display-->
         <p class="label-highscore">
           🥇 Highscore: <span class="highscore">0</span>
         </p>
